--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "mkdocs": "jsdoc -d \"./docs\" index.js"
   },
   "author": "Alexander Hicks",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "ajv": "^6.5.2",
     "colors": "^1.3.1",
     "ws": "^6.0.0"
+  },
+  "devDependencies": {
+    "jsdoc": "^3.5.5"
   }
 }
